--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "quill": "^1.3.7",
+    "quill-delta": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
