--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "quill-delta": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
